// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TgAssistantLambdaStack (ZIP-based Node.js Lambda) creates Lambda invoke permission for HTTP API (pattern covered by snapshot) 1`] = `
{
  "Description": "Test stack",
  "Outputs": {
    "ApiGatewaySourceArn": {
      "Value": "arn:aws:execute-api:us-east-1:123456789012:abc123/beta/*",
    },
    "FunctionArn": {
      "Value": {
        "Fn::GetAtt": [
          "Function76856677",
          "Arn",
        ],
      },
    },
    "FunctionName": {
      "Value": {
        "Ref": "Function76856677",
      },
    },
    "LambdaRegion": {
      "Value": "us-east-1",
    },
    "TelegramWebhookSecretArn": {
      "Value": {
        "Ref": "TelegramWebhookSecret2F3DC73E",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGatewayInvokePermission": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "Function76856677",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": "arn:aws:execute-api:us-east-1:123456789012:abc123/beta/*",
      },
      "Type": "AWS::Lambda::Permission",
    },
    "Function76856677": {
      "DependsOn": [
        "LambdaExecutionRoleDefaultPolicy6D69732F",
        "LambdaExecutionRoleD5C26073",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "9237631b006453b8d2b275e61053dbf9c1ec0da492720b99a9d83ce3b802c656.zip",
        },
        "Environment": {
          "Variables": {
            "NODE_ENV": "production",
            "TELEGRAM_SECRET_ARN": {
              "Ref": "TelegramWebhookSecret2F3DC73E",
            },
          },
        },
        "FunctionName": "telegram-webhook-lambda-dev",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "FunctionLogGroupBD1576D5",
          },
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecutionRoleD5C26073",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FunctionLogGroupBD1576D5": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/aws/lambda/telegram-webhook-lambda-dev",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "LambdaExecutionRoleD5C26073": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Execution role for Lambda to write logs",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "RoleName": "telegram-webhook-lambda-role-dev",
      },
      "Type": "AWS::IAM::Role",
    },
    "LambdaExecutionRoleDefaultPolicy6D69732F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "TelegramWebhookSecret2F3DC73E",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LambdaExecutionRoleDefaultPolicy6D69732F",
        "Roles": [
          {
            "Ref": "LambdaExecutionRoleD5C26073",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TelegramWebhookSecret2F3DC73E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Telegram webhook secret and bot token used for webhook validation and API calls",
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "placeholder",
          "PasswordLength": 16,
          "SecretStringTemplate": "{}",
        },
        "Name": "/tg-assistant/telegram-secrets/dev",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`TgAssistantLambdaStack (ZIP-based Node.js Lambda) synthesizes expected CloudFormation template (snapshot) 1`] = `
{
  "Description": "Test stack",
  "Outputs": {
    "FunctionArn": {
      "Value": {
        "Fn::GetAtt": [
          "Function76856677",
          "Arn",
        ],
      },
    },
    "FunctionName": {
      "Value": {
        "Ref": "Function76856677",
      },
    },
    "LambdaRegion": {
      "Value": "us-east-1",
    },
    "TelegramWebhookSecretArn": {
      "Value": {
        "Ref": "TelegramWebhookSecret2F3DC73E",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Function76856677": {
      "DependsOn": [
        "LambdaExecutionRoleDefaultPolicy6D69732F",
        "LambdaExecutionRoleD5C26073",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "1ebc9d3ac2033816c4abb63e4afd69d350b4aba8704cc9236b82ea520b74f4b0.zip",
        },
        "Environment": {
          "Variables": {
            "NODE_ENV": "production",
            "TELEGRAM_SECRET_ARN": {
              "Ref": "TelegramWebhookSecret2F3DC73E",
            },
          },
        },
        "FunctionName": "telegram-webhook-lambda-dev",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "FunctionLogGroupBD1576D5",
          },
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecutionRoleD5C26073",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FunctionLogGroupBD1576D5": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/aws/lambda/telegram-webhook-lambda-dev",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "LambdaExecutionRoleD5C26073": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Execution role for Lambda to write logs",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "RoleName": "telegram-webhook-lambda-role-dev",
      },
      "Type": "AWS::IAM::Role",
    },
    "LambdaExecutionRoleDefaultPolicy6D69732F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "TelegramWebhookSecret2F3DC73E",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LambdaExecutionRoleDefaultPolicy6D69732F",
        "Roles": [
          {
            "Ref": "LambdaExecutionRoleD5C26073",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TelegramWebhookSecret2F3DC73E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Telegram webhook secret and bot token used for webhook validation and API calls",
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "placeholder",
          "PasswordLength": 16,
          "SecretStringTemplate": "{}",
        },
        "Name": "/tg-assistant/telegram-secrets/dev",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
